--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
     <!-- 页面底部开始 -->
     <div id="footer">
-        <div class="service">
+        <div class="service w">
             <div class="slogen">
                 <span class="item slogen1">
               <img src="images/slogen1.png" alt="">
